# cortex-py

./: .gitignore  .mcp.json  README.md  pyproject.toml
config/: config.yaml
data/: incident-etch-E301-20260620.json  incident-etch-E301-20260620.txt  structure-etch-E301.json  structure-etch-E301.txt
docs/: DEPLOYMENT.md  GUIDE-INGEST.md  HANDOFF.md  INGEST-BEST-PRACTICES.md  SCOPE-GUIDE.md  TEMPLATE-DIAGNOSIS.md  USAGE-GUIDE.md  mcp.md
docs/reference/: README.md
docs/specs/: 01-technical-decisions.md  02-research-notes.md  03-data-model.md  04-stage0-smoke-test.md  05-gap-closure.md  06-implementation-prd.md  07-stage7-prd.md  08-gap-vs-official.md  09-completion-plan.md  10-diagnosis-ingest.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
scripts/: db_proxy.py  demo_diagnosis.py  gen_diagnosis_data.py  run_regression.sh  verify_cases.py  verify_mcp.py  verify_mcp_http.py  verify_stage6.py  verify_stage7.py
scripts/stage0/: 00_extensions.sql  01_schema.sql  02_seed_data.sql  03_temporal_tests.sql  04_graph_traversal.sql  05_entity_resolution.sql  06_scope_isolation.sql  07_queue_demo.sql  08_blobs_vocab.sql  09_erasure_refcount.sql  decision_probe.py  run_all.py  run_all.sh  stage0_report.txt
src/cortex/: __init__.py  chunking.py  cli.py  (+18 more)
tests/: conftest.py  test_api.py  test_assertion_semantics.py  test_case_retrieval_operational.py  test_core.py  test_extraction_retrieval.py  test_extraction_shape.py  test_llm_max_tokens.py  test_temporal_identity_belief.py
(+75 files in other folders)
