[project]
name = "cortex"
version = "0.1.0"
description = "CortexDB reimplementation — agent long-term memory with knowledge graph focus"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.12",
    "pgvector>=0.3.6",
    "openai>=1.55",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
cortex = "cortex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
